# PS_honeypot

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  honeypot_tests.py  main.c
include/: blacklist.h  config.h  honeypot.h  http_responses.h  logger.h  protocol_handler.h  suspicion_tracker.h  threaded_honeypot.h  utils.h  whitelist.h
src/: blacklist.c  honeypot.c  http_responses.c  legacy_honeypot.c  logger.c  protocol_handler.c  suspicion_tracker.c  threaded_honeypot.c  utils.c  whitelist.c
